--- a/cadastro.html
+++ b/cadastro.html
@@ -1,94 +1,41 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Cadastro — ONG Exemplo</title>
-  <meta name="description" content="Formulário de cadastro de voluntários e doadores." />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cadastro — ONG Esperança Viva</title>
+
+  <!-- Fonte bonita -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+  <!-- CSS -->
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <header class="site-header">
     <div class="container header-inner">
-      <h1 class="logo">ONG Exemplo</h1>
-      <nav aria-label="Navegação principal">
-        <ul class="nav">
-          <li><a href="index.html">Início</a></li>
-          <li><a href="projetos.html">Projetos</a></li>
-          <li><a href="cadastro.html">Cadastro</a></li>
-        </ul>
-      </nav>
+      <div class="logo">ONG Esperança Viva</div>
+      <ul class="nav">
+        <li><a href="index.html">Início</a></li>
+        <li><a href="projetos.html">Projetos</a></li>
+        <li><a href="cadastro.html" class="active">Cadastro</a></li>
+      </ul>
     </div>
   </header>
 
   <main class="container">
-    <h2>Cadastro</h2>
-    <form id="cadastroForm" action="#" method="post" novalidate>
-      <fieldset>
-        <legend>Dados pessoais</legend>
+    <section>
+      <h2 class="section-title">Faça seu Cadastro</h2>
+      <p>Preencha o formulário abaixo e faça parte das nossas ações solidárias!</p>
 
-        <label for="nome">Nome completo *</label>
-        <input id="nome" name="nome" type="text" required minlength="3">
+      <form class="form">
+        <label for="nome">Nome completo</label>
+        <input type="text" id="nome" name="nome" placeholder="Digite seu nome completo" required>
 
-        <label for="email">E-mail *</label>
-        <input id="email" name="email" type="email" required>
+        <label for="email">E-mail</label>
+        <input type="email" id="email" name="email" placeholder="Digite seu e-mail" required>
 
-        <label for="cpf">CPF *</label>
-        <input id="cpf" name="cpf" type="text" maxlength="14" placeholder="000.000.000-00" required>
-
-        <label for="telefone">Telefone *</label>
-        <input id="telefone" name="telefone" type="tel" maxlength="15" placeholder="(11) 9xxxx-xxxx" required>
-
-        <label for="nascimento">Data de nascimento</label>
-        <input id="nascimento" name="nascimento" type="date">
-      </fieldset>
-
-      <fieldset>
-        <legend>Endereço</legend>
-
-        <label for="cep">CEP *</label>
-        <input id="cep" name="cep" type="text" maxlength="9" placeholder="00000-000" required>
-
-        <label for="endereco">Endereço</label>
-        <input id="endereco" name="endereco" type="text">
-
-        <label for="cidade">Cidade</label>
-        <input id="cidade" name="cidade" type="text">
-
-        <label for="estado">Estado</label>
-        <select id="estado" name="estado">
-          <option value="">Selecione</option>
-          <option value="SP">SP</option>
-          <option value="RJ">RJ</option>
-          <option value="MG">MG</option>
-          <!-- adicionar outros se quiser -->
-        </select>
-      </fieldset>
-
-      <fieldset>
-        <legend>Preferências</legend>
-        <label><input type="radio" name="perfil" value="voluntario" checked> Voluntário</label>
-        <label><input type="radio" name="perfil" value="doador"> Doador / Apoiador</label>
-
-        <label for="mensagem">Mensagem (opcional)</label>
-        <textarea id="mensagem" name="mensagem" rows="4"></textarea>
-      </fieldset>
-
-      <div class="form-actions">
-        <button type="submit" class="btn">Enviar</button>
-        <button type="reset" class="btn secondary">Limpar</button>
-      </div>
-
-      <div id="form-messages" aria-live="polite"></div>
-    </form>
-  </main>
-
-  <footer class="site-footer">
-    <div class="container">
-      <p>© <span id="year3"></span> ONG Exemplo</p>
-    </div>
-  </footer>
-
-  <script src="js/scripts.js" defer></script>
-</body>
-</html>
+        <label for="telefone">Telefone</label>
+        <input t
