--- a/projetos.html
+++ b/projetos.html
@@ -1,59 +1,26 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Projetos — ONG Esperança Viva</title>
+<main>
+  <section>
+    <h2>Nossos Projetos</h2>
+    <p>Conheça as principais ações que desenvolvemos em prol da comunidade.</p>
 
-  <!-- Fonte bonita -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-
-  <!-- CSS -->
-  <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
-  <header class="site-header">
-    <div class="container header-inner">
-      <div class="logo">ONG Esperança Viva</div>
-      <ul class="nav">
-        <li><a href="index.html">Início</a></li>
-        <li><a href="projetos.html" class="active">Projetos</a></li>
-        <li><a href="cadastro.html">Cadastro</a></li>
-      </ul>
-    </div>
-  </header>
-
-  <main class="container">
-    <section>
-      <h2 class="section-title">Nossos Projetos</h2>
-      <p>Conheça as principais ações que desenvolvemos em prol da comunidade.</p>
-
-      <div class="grid">
-        <div class="card">
-          <img src="assets/images/projeto1.jpg" alt="Distribuição de alimentos" class="card-img">
-          <h3>Projeto Alimentar com Amor</h3>
-          <p>Distribuímos cestas básicas e refeições para famílias em situação de vulnerabilidade social.</p>
-        </div>
-
-        <div class="card">
-          <img src="assets/images/projeto2.jpg" alt="Crianças estudando" class="card-img">
-          <h3>Educação que Transforma</h3>
-          <p>Oferecemos reforço escolar gratuito e oficinas de leitura para crianças e adolescentes.</p>
-        </div>
-
-        <div class="card">
-          <img src="assets/images/projeto3.jpg" alt="Mutirão ambiental" class="card-img">
-          <h3>Verde Esperança</h3>
-          <p>Promovemos ações ambientais, como plantio de árvores e campanhas de limpeza urbana.</p>
-        </div>
+    <div class="projetos">
+      <div class="card">
+        <img src="image.png" alt="Distribuição de alimentos">
+        <h3>Projeto Alimentar com Amor</h3>
+        <p>Distribuímos cestas básicas e refeições para famílias em situação de vulnerabilidade social.</p>
       </div>
-    </section>
-  </main>
 
-  <footer class="site-footer">
-    © 2025 ONG Esperança Viva — Todos os direitos reservados.
-  </footer>
-</body>
-</html>
+      <div class="card">
+        <img src="image.png" alt="Crianças estudando">
+        <h3>Educação que Transforma</h3>
+        <p>Oferecemos reforço escolar gratuito e oficinas de leitura para crianças e adolescentes.</p>
+      </div>
+
+      <div class="card">
+        <img src="image.png" alt="Mutirão ambiental">
+        <h3>Verde Esperança</h3>
+        <p>Promovemos ações ambientais, como plantio de árvores e campanhas de limpeza urbana.</p>
+      </div>
+    </div>
+  </section>
+</main>
