--- a/index.html
+++ b/index.html
@@ -1,20 +1,63 @@
-<link rel="stylesheet" href="css/styles.css">
-<main>
-  <section>
-    <h2>Transformando vidas por meio da solidariedade</h2>
-    <p>
-      A ONG Esperança Viva atua há mais de 10 anos promovendo inclusão social e oportunidades para comunidades carentes.
-    </p>
-    <a href="projetos.html" class="btn">Conheça nossos projetos</a>
-    <img src="image.png" alt="Voluntários ajudando em projeto social">
-  </section>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ONG Esperança Viva</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+  <header class="site-header">
+    <div class="container header-inner">
+      <div class="logo">ONG Esperança Viva</div>
+      <ul class="nav">
+        <li><a href="index.html" class="active">Início</a></li>
+        <li><a href="projetos.html">Projetos</a></li>
+        <li><a href="cadastro.html">Cadastro</a></li>
+      </ul>
+    </div>
+  </header>
 
-  <section>
-    <h2>Missão, Visão e Valores</h2>
-    <ul>
-      <li><strong>Missão:</strong> Promover o desenvolvimento humano e social.</li>
-      <li><strong>Visão:</strong> Ser referência em projetos de impacto comunitário.</li>
-      <li><strong>Valores:</strong> Solidariedade, Transparência e Respeito.</li>
-    </ul>
-  </section>
-</main>
+  <main class="container">
+    <section class="hero">
+      <div class="hero-inner">
+        <div>
+          <h2>Transformando vidas por meio da solidariedade</h2>
+          <p>A ONG Esperança Viva atua há mais de 10 anos promovendo inclusão social e oportunidades para comunidades carentes.</p>
+          <a href="projetos.html" class="cta">Conheça nossos projetos</a>
+        </div>
+        <div>
+          <img src="assets/images/hero.jpg" alt="Voluntários ajudando em projeto social" class="hero-img">
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <h3 class="section-title">Missão, Visão e Valores</h3>
+      <div class="card">
+        <ul>
+          <li><strong>Missão:</strong> Promover o desenvolvimento humano e social.</li>
+          <li><strong>Visão:</strong> Ser referência em projetos de impacto comunitário.</li>
+          <li><strong>Valores:</strong> Solidariedade, Transparência e Respeito.</li>
+        </ul>
+      </div>
+    </section>
+
+    <section>
+      <h3 class="section-title">Entre em Contato</h3>
+      <div class="card">
+        <p><strong>E-mail:</strong> contato@ongesperancaviva.org.br</p>
+        <p><strong>Telefone:</strong> (11) 99999-9999</p>
+        <p><strong>Endereço:</strong> Rua da Esperança, 100 - São Paulo/SP</p>
+      </div>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    © 2025 ONG Esperança Viva — Todos os direitos reservados.
+  </footer>
+</body>
+</html>
