--- a/cadastro.html
+++ b/cadastro.html
@@ -4,13 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cadastro — ONG Esperança Viva</title>
-
-  <!-- Fonte bonita -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-
-  <!-- CSS -->
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -26,16 +22,39 @@
   </header>
 
   <main class="container">
-    <section>
-      <h2 class="section-title">Faça seu Cadastro</h2>
-      <p>Preencha o formulário abaixo e faça parte das nossas ações solidárias!</p>
+    <section class="form-section">
+      <h2 class="section-title">Cadastre-se como Voluntário</h2>
+      <p>Faça parte dessa rede de solidariedade. Preencha o formulário abaixo e venha transformar vidas conosco!</p>
 
-      <form class="form">
-        <label for="nome">Nome completo</label>
-        <input type="text" id="nome" name="nome" placeholder="Digite seu nome completo" required>
+      <form class="form-card">
+        <label>Nome Completo</label>
+        <input type="text" placeholder="Digite seu nome" required>
 
-        <label for="email">E-mail</label>
-        <input type="email" id="email" name="email" placeholder="Digite seu e-mail" required>
+        <label>E-mail</label>
+        <input type="email" placeholder="exemplo@email.com" required>
 
-        <label for="telefone">Telefone</label>
-        <input t
+        <label>Telefone</label>
+        <input type="tel" placeholder="(11) 99999-9999" required>
+
+        <label>Área de Interesse</label>
+        <select required>
+          <option value="">Selecione...</option>
+          <option>Educação</option>
+          <option>Meio Ambiente</option>
+          <option>Ação Social</option>
+          <option>Eventos</option>
+        </select>
+
+        <label>Mensagem</label>
+        <textarea rows="4" placeholder="Conte um pouco sobre você"></textarea>
+
+        <button type="submit" class="cta">Enviar Cadastro</button>
+      </form>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    © 2025 ONG Esperança Viva — Todos os direitos reservados.
+  </footer>
+</body>
+</html>
