--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ONG Esperança Viva</title>
+
+  <!-- Fonte bonita -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+  <!-- CSS -->
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+  <!-- Cabeçalho -->
   <header class="site-header">
     <div class="container header-inner">
       <div class="logo">ONG Esperança Viva</div>
@@ -21,20 +26,23 @@
     </div>
   </header>
 
+  <!-- Conteúdo principal -->
   <main class="container">
+    <!-- Seção principal (hero) -->
     <section class="hero">
       <div class="hero-inner">
-        <div>
+        <div class="hero-text">
           <h2>Transformando vidas por meio da solidariedade</h2>
           <p>A ONG Esperança Viva atua há mais de 10 anos promovendo inclusão social e oportunidades para comunidades carentes.</p>
           <a href="projetos.html" class="cta">Conheça nossos projetos</a>
         </div>
-        <div>
+        <div class="hero-image">
           <img src="assets/images/hero.jpg" alt="Voluntários ajudando em projeto social" class="hero-img">
         </div>
       </div>
     </section>
 
+    <!-- Missão, Visão e Valores -->
     <section>
       <h3 class="section-title">Missão, Visão e Valores</h3>
       <div class="card">
@@ -46,6 +54,31 @@
       </div>
     </section>
 
+    <!-- Projetos em destaque -->
+    <section>
+      <h3 class="section-title">Projetos em Destaque</h3>
+      <div class="grid">
+        <div class="card">
+          <img src="assets/images/projeto1.jpg" alt="Distribuição de alimentos" class="card-img">
+          <h4>Projeto Alimentar com Amor</h4>
+          <p>Distribuímos cestas básicas e refeições para famílias em situação de vulnerabilidade social.</p>
+        </div>
+
+        <div class="card">
+          <img src="assets/images/projeto2.jpg" alt="Crianças estudando" class="card-img">
+          <h4>Educação que Transforma</h4>
+          <p>Oferecemos reforço escolar gratuito e oficinas de leitura para crianças e adolescentes.</p>
+        </div>
+
+        <div class="card">
+          <img src="assets/images/projeto3.jpg" alt="Mutirão ambiental" class="card-img">
+          <h4>Verde Esperança</h4>
+          <p>Promovemos ações ambientais, como plantio de árvores e campanhas de limpeza urbana.</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Contato -->
     <section>
       <h3 class="section-title">Entre em Contato</h3>
       <div class="card">
@@ -56,6 +89,7 @@
     </section>
   </main>
 
+  <!-- Rodapé -->
   <footer class="site-footer">
     © 2025 ONG Esperança Viva — Todos os direitos reservados.
   </footer>
