--- a/projetos.html
+++ b/projetos.html
@@ -4,12 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Projetos — ONG Esperança Viva</title>
+
+  <!-- Fonte bonita -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+  <!-- CSS -->
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+  <!-- Cabeçalho -->
   <header class="site-header">
     <div class="container header-inner">
       <div class="logo">ONG Esperança Viva</div>
@@ -21,6 +26,7 @@
     </div>
   </header>
 
+  <!-- Conteúdo principal -->
   <main class="container">
     <section>
       <h2 class="section-title">Nossos Projetos</h2>
@@ -48,6 +54,7 @@
     </section>
   </main>
 
+  <!-- Rodapé -->
   <footer class="site-footer">
     © 2025 ONG Esperança Viva — Todos os direitos reservados.
   </footer>
