--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <a href="projetos.html" class="cta">Conheça nossos projetos</a>
         </div>
         <div class="hero-image">
-          <img src="assets/images/hero.jpg" alt="Voluntários ajudando em projeto social" class="hero-img">
+          <img src="assets/images/Projeto1.jpg" alt="Voluntários ajudando em projeto social" class="Projeto1-img">
         </div>
       </div>
     </section>
