--- a/index.html
+++ b/index.html
@@ -41,7 +41,24 @@
         </div>
       </div>
     </section>
-
+     <div class="grid">
+        <div class="card">
+          <img src="assets/images/projeto2.jpg" alt="Distribuição de alimentos" class="card-img">
+          <h3>Projeto Alimentar com Amor</h3>
+          <p>Distribuímos cestas básicas e refeições para famílias em situação de vulnerabilidade social.</p>
+        </div>
+        <div class="grid">
+        <div class="card">
+          <img src="assets/images/projeto3.jpg" alt="Crianças estudando" class="card-img">
+          <h3>Projeto Alimentar com Amor</h3>
+          <p>Distribuímos cestas básicas e refeições para famílias em situação de vulnerabilidade social.</p>
+        </div>
+           <div class="grid">
+        <div class="card">
+          <img src="assets/images/projeto4.jpg" alt="Multirão ambiental" class="card-img">
+          <h3>Projeto Alimentar com Amor</h3>
+          <p>Distribuímos cestas básicas e refeições para famílias em situação de vulnerabilidade social.</p>
+        </div>
     <!-- Missão, Visão e Valores -->
     <section>
       <h3 class="section-title">Missão, Visão e Valores</h3>
