--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
           <h2>Transformando vidas por meio da solidariedade</h2>
           <p>A ONG Esperança Viva atua há mais de 10 anos promovendo inclusão social e oportunidades para comunidades carentes.</p>
           <a href="projetos.html" class="cta">Conheça nossos projetos</a>
+
+          <!-- Imagens tela principal -->
         </div>
         <div class="hero-image">
           <img src="assets/images/Projeto1.jpg" alt="Voluntários ajudando em projeto social" class="Projeto1-img">
