--- a/index.html
+++ b/index.html
@@ -71,4 +71,29 @@
     <!-- Missão, Visão e Valores -->
     <section>
       <h3 class="section-title">Missão, Visão e Valores</h3>
-      <div class="card"
+      <div class="card">
+        <ul>
+          <li><strong>Missão:</strong> Promover o desenvolvimento humano e social.</li>
+          <li><strong>Visão:</strong> Ser referência em projetos de impacto comunitário.</li>
+          <li><strong>Valores:</strong> Solidariedade, Transparência e Respeito.</li>
+        </ul>
+      </div>
+    </section>
+
+    <!-- Contato -->
+    <section>
+      <h3 class="section-title">Entre em Contato</h3>
+      <div class="card">
+        <p><strong>E-mail:</strong> contato@ongesperancaviva.org.br</p>
+        <p><strong>Telefone:</strong> (11) 99999-9999</p>
+        <p><strong>Endereço:</strong> Rua da Esperança, 100 - São Paulo/SP</p>
+      </div>
+    </section>
+  </main>
+
+  <!-- Rodapé -->
+  <footer class="site-footer">
+    © 2025 ONG Esperança Viva — Todos os direitos reservados.
+  </footer>
+</body>
+</html>
