--- a/projetos.html
+++ b/projetos.html
@@ -5,12 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Projetos — ONG Esperança Viva</title>
 
-  <!-- Fonte bonita -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
-  <!-- CSS -->
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -26,7 +24,6 @@
     </div>
   </header>
 
-  <!-- Conteúdo principal -->
   <main class="container">
     <section>
       <h2 class="section-title">Nossos Projetos</h2>
@@ -34,19 +31,19 @@
 
       <div class="grid">
         <div class="card">
-          <img src="assets/images/projeto2.jpg" alt="Distribuição de alimentos" class="card-img">
+          <img src="assets/images/Projeto2.jpg" alt="Distribuição de alimentos" class="card-img">
           <h3>Projeto Alimentar com Amor</h3>
           <p>Distribuímos cestas básicas e refeições para famílias em situação de vulnerabilidade social.</p>
         </div>
 
         <div class="card">
-          <img src="assets/images/projeto3.jpg" alt="Crianças estudando" class="card-img">
+          <img src="assets/images/Projeto3.jpg" alt="Crianças estudando" class="card-img">
           <h3>Educação que Transforma</h3>
           <p>Oferecemos reforço escolar gratuito e oficinas de leitura para crianças e adolescentes.</p>
         </div>
 
         <div class="card">
-          <img src="assets/images/projeto4.jpg" alt="Mutirão ambiental" class="card-img">
+          <img src="assets/images/Projeto4.jpg" alt="Mutirão ambiental" class="card-img">
           <h3>Verde Esperança</h3>
           <p>Promovemos ações ambientais, como plantio de árvores e campanhas de limpeza urbana.</p>
         </div>
@@ -54,7 +51,6 @@
     </section>
   </main>
 
-  <!-- Rodapé -->
   <footer class="site-footer">
     © 2025 ONG Esperança Viva — Todos os direitos reservados.
   </footer>
