--- a/index.html
+++ b/index.html
@@ -97,3 +97,47 @@
   </footer>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Plataforma ONG</title>
+  <link rel="stylesheet" href="css/variables.css">
+  <link rel="stylesheet" href="css/layout.css">
+  <link rel="stylesheet" href="css/components.css">
+  <link rel="stylesheet" href="css/forms.css">
+  <script defer src="js/scripts.js"></script>
+</head>
+<body>
+  <header>
+    <h1>Plataforma ONG</h1>
+    <button class="menu-btn">☰</button>
+    <nav>
+      <ul>
+        <li><a href="index.html">Início</a></li>
+        <li><a href="projetos.html">Projetos</a></li>
+        <li><a href="cadastro.html">Cadastro</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main class="container">
+    <section class="card" style="grid-column: span 6;">
+      <h2>Bem-vindo à nossa ONG</h2>
+      <p>Transformando vidas através de projetos sociais.</p>
+      <a href="projetos.html" class="btn">Ver Projetos</a>
+    </section>
+    <section class="card" style="grid-column: span 6;">
+      <h2>Cadastre-se</h2>
+      <p>Junte-se a nós e faça parte da mudança!</p>
+      <a href="cadastro.html" class="btn">Cadastrar</a>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 Plataforma ONG. Todos os direitos reservados.</p>
+  </footer>
+</body>
+</html>
+
