--- a/projetos.html
+++ b/projetos.html
@@ -24,35 +24,36 @@
     </div>
   </header>
 
+  <!-- Conteúdo principal -->
   <main class="container">
     <section>
       <h2 class="section-title">Nossos Projetos</h2>
-      <p>Conheça as principais ações que desenvolvemos em prol da comunidade.</p>
+      <p>Conheça as principais ações que desenvolvemos em prol da comunidade e descubra como você pode participar.</p>
 
       <div class="grid">
-        <div class="card">
+        <!-- Projeto 1 -->
+        <article class="card">
           <img src="assets/images/Projeto2.jpg" alt="Distribuição de alimentos" class="card-img">
           <h3>Projeto Alimentar com Amor</h3>
-          <p>Distribuímos cestas básicas e refeições para famílias em situação de vulnerabilidade social.</p>
-        </div>
+          <p>Distribuímos cestas básicas e refeições para famílias em situação de vulnerabilidade social. Toda ajuda é bem-vinda, seja com doações de alimentos ou apoio na logística de entrega.</p>
+        </article>
 
-        <div class="card">
+        <!-- Projeto 2 -->
+        <article class="card">
           <img src="assets/images/Projeto3.jpg" alt="Crianças estudando" class="card-img">
           <h3>Educação que Transforma</h3>
-          <p>Oferecemos reforço escolar gratuito e oficinas de leitura para crianças e adolescentes.</p>
-        </div>
+          <p>Oferecemos reforço escolar gratuito e oficinas de leitura para crianças e adolescentes. Nosso objetivo é garantir que cada criança tenha acesso à educação de qualidade.</p>
+        </article>
 
-        <div class="card">
+        <!-- Projeto 3 -->
+        <article class="card">
           <img src="assets/images/Projeto4.jpg" alt="Mutirão ambiental" class="card-img">
           <h3>Verde Esperança</h3>
-          <p>Promovemos ações ambientais, como plantio de árvores e campanhas de limpeza urbana.</p>
-        </div>
+          <p>Promovemos ações ambientais, como plantio de árvores e campanhas de limpeza urbana. Acreditamos que cuidar do meio ambiente é cuidar das futuras gerações.</p>
+        </article>
       </div>
     </section>
-  </main>
 
-  <footer class="site-footer">
-    © 2025 ONG Esperança Viva — Todos os direitos reservados.
-  </footer>
-</body>
-</html>
+    <!-- Voluntariado -->
+    <section>
+      <h2 class="section-title">Seja u
