--- a/projetos.html
+++ b/projetos.html
@@ -56,4 +56,53 @@
 
     <!-- Voluntariado -->
     <section>
-      <h2 class="section-title">Seja u
+      <h2 class="section-title">Seja um Voluntário</h2>
+      <div class="card">
+        <p>Junte-se a nossa equipe de voluntários e contribua com o seu tempo e talento em nossos projetos. Cada ação faz diferença na vida de muitas pessoas!</p>
+        <ul>
+          <li>📚 Ajudar em oficinas educativas e reforço escolar;</li>
+          <li>🌳 Participar de mutirões ambientais e eventos sociais;</li>
+          <li>🤝 Apoiar campanhas de arrecadação e distribuição;</li>
+          <li>🎉 Colaborar na organização de eventos beneficentes.</li>
+        </ul>
+        <a href="cadastro.html" class="cta">Cadastre-se como voluntário</a>
+      </div>
+    </section>
+
+    <!-- Doações -->
+    <section>
+      <h2 class="section-title">Apoie com Doações</h2>
+      <div class="grid">
+        <div class="card">
+          <h3>Doações Financeiras</h3>
+          <p>Contribua com qualquer valor para manter nossos projetos ativos. Sua doação ajuda a alimentar, educar e transformar vidas.</p>
+          <p><strong>Pix:</strong> doacoes@ongesperancaviva.org.br</p>
+        </div>
+
+        <div class="card">
+          <h3>Doações de Itens</h3>
+          <p>Também recebemos roupas, brinquedos, materiais escolares e alimentos não perecíveis.</p>
+          <p><strong>Ponto de Coleta:</strong> Rua da Esperança, 100 — São Paulo/SP</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Conteúdo multimídia -->
+    <section>
+      <h2 class="section-title">Veja Nossas Ações em Movimento</h2>
+      <div class="card" style="text-align:center;">
+        <video width="100%" controls poster="assets/images/Projeto1.jpg">
+          <source src="assets/videos/acao-social.mp4" type="video/mp4">
+          Seu navegador não suporta a reprodução de vídeo.
+        </video>
+        <p>Assista a um resumo das últimas ações realizadas pela ONG Esperança Viva e inspire-se a fazer parte dessa transformação!</p>
+      </div>
+    </section>
+  </main>
+
+  <!-- Rodapé -->
+  <footer class="site-footer">
+    © 2025 ONG Esperança Viva — Todos os direitos reservados.
+  </footer>
+</body>
+</html>
