--- a/index.html
+++ b/index.html
@@ -1,126 +1,259 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ONG Esperança Viva</title>
 
-  <!-- Fontes e CSS -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- Fonte moderna -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
-  <!-- Design System -->
-  <link rel="stylesheet" href="css/variables.css">
-  <link rel="stylesheet" href="css/layout.css">
-  <link rel="stylesheet" href="css/components.css">
-  <link rel="stylesheet" href="css/forms.css">
-  <link rel="stylesheet" href="css/styles.css">
+  <!-- Estilos gerais -->
+  <link rel="stylesheet" href="css/styles.css" />
 
-  <!-- Scripts -->
-  <script defer src="js/scripts.js"></script>
+  <style>
+    body {
+      margin: 0;
+      font-family: "Inter", sans-serif;
+      background-color: #f5f5f5;
+      color: #333;
+    }
+
+    /* ====== CABEÇALHO ====== */
+    header {
+      background-color: #2e7d32;
+      color: #fff;
+      padding: 15px 20px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      position: relative;
+    }
+
+    .menu-toggle {
+      font-size: 28px;
+      cursor: pointer;
+      background: none;
+      border: none;
+      color: #fff;
+    }
+
+    .site-title {
+      font-weight: 700;
+      font-size: 1.6rem;
+      text-align: center;
+      flex: 1;
+      color: #fff;
+      letter-spacing: 1px;
+    }
+
+    nav {
+      display: flex;
+      gap: 20px;
+    }
+
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: 500;
+      transition: color 0.3s;
+    }
+
+    nav a:hover {
+      color: #c8e6c9;
+    }
+
+    /* ====== MENU RESPONSIVO ====== */
+    @media (max-width: 768px) {
+      nav {
+        display: none;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        width: 100%;
+        background-color: #2e7d32;
+        flex-direction: column;
+        align-items: center;
+        padding: 10px 0;
+      }
+
+      nav.active {
+        display: flex;
+      }
+    }
+
+    /* ====== CONTEÚDO PRINCIPAL ====== */
+    main {
+      padding: 40px 20px;
+      max-width: 1200px;
+      margin: 0 auto;
+      display: grid;
+      gap: 30px;
+    }
+
+    .intro {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      align-items: center;
+      gap: 30px;
+    }
+
+    .intro h1 {
+      font-size: 2.5rem;
+      color: #2e7d32;
+      line-height: 1.2;
+      margin-bottom: 10px;
+    }
+
+    .intro p {
+      font-size: 1.1rem;
+      margin-bottom: 15px;
+    }
+
+    .btn {
+      background-color: #2e7d32;
+      color: #fff;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: 600;
+      display: inline-block;
+    }
+
+    .btn:hover {
+      background-color: #1b5e20;
+    }
+
+    .intro img {
+      width: 100%;
+      border-radius: 12px;
+      box-shadow: 0 3px 10px rgba(0, 0, 0, 0.15);
+    }
+
+    /* ====== SEÇÕES ====== */
+    .section {
+      background: #fff;
+      padding: 25px;
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    .section h2 {
+      color: #2e7d32;
+      font-size: 1.6rem;
+      margin-bottom: 15px;
+    }
+
+    .grid {
+      display: grid;
+      gap: 20px;
+    }
+
+    @media (min-width: 768px) {
+      .grid {
+        grid-template-columns: repeat(3, 1fr);
+      }
+    }
+
+    .card {
+      background: #fafafa;
+      border-radius: 10px;
+      padding: 15px;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+      text-align: center;
+    }
+
+    .card img {
+      width: 100%;
+      border-radius: 10px;
+      margin-bottom: 10px;
+    }
+
+    .card h3 {
+      color: #2e7d32;
+      margin-bottom: 8px;
+    }
+
+    footer {
+      background-color: #2e7d32;
+      color: #fff;
+      text-align: center;
+      padding: 15px 0;
+      margin-top: 40px;
+    }
+  </style>
 </head>
 <body>
-
-  <!-- Cabeçalho -->
-  <header class="site-header">
-    <div class="container header-inner">
-      <h1 class="logo">ONG Esperança Viva</h1>
-      <button class="menu-btn">☰</button>
-      <nav>
-        <ul class="nav">
-          <li><a href="index.html" class="active">Início</a></li>
-          <li><a href="projetos.html">Projetos</a></li>
-          <li><a href="cadastro.html">Cadastro</a></li>
-        </ul>
-      </nav>
-    </div>
+  <!-- ====== CABEÇALHO ====== -->
+  <header>
+    <button class="menu-toggle" id="menu-toggle">☰</button>
+    <h1 class="site-title">ONG Esperança Viva</h1>
+    <nav id="nav-menu">
+      <a href="index.html">Início</a>
+      <a href="projetos.html">Projetos</a>
+      <a href="cadastro.html">Cadastro</a>
+    </nav>
   </header>
 
-  <!-- Conteúdo principal -->
-  <main class="container">
-
-    <!-- HERO -->
-    <section class="hero">
-      <div class="hero-inner">
-        <div class="hero-text">
-          <h2>Transformando vidas por meio da solidariedade</h2>
-          <p>A ONG Esperança Viva atua há mais de 10 anos promovendo inclusão social e oportunidades para comunidades carentes.</p>
-          <a href="projetos.html" class="btn">Conheça nossos projetos</a>
-        </div>
-
-        <div class="hero-image">
-          <img src="assets/images/Projeto1.jpg" alt="Voluntários ajudando em projeto social" class="hero-img">
-        </div>
+  <!-- ====== CONTEÚDO PRINCIPAL ====== -->
+  <main>
+    <section class="intro">
+      <div>
+        <h1>Transformando vidas por meio da solidariedade</h1>
+        <p>A <strong>ONG Esperança Viva</strong> atua há mais de 10 anos promovendo inclusão social e oportunidades para comunidades carentes.</p>
+        <a href="projetos.html" class="btn">Conheça nossos projetos</a>
       </div>
+      <img src="assets/images/Projeto2.jpg" alt="Ação solidária">
     </section>
 
-    <!-- PROJETOS EM DESTAQUE -->
-    <section>
-      <h3 class="section-title">Projetos em Destaque</h3>
+    <section class="section">
+      <h2>Projetos em Destaque</h2>
       <div class="grid">
-        <article class="card">
-          <img src="assets/images/Projeto2.jpg" alt="Distribuição de alimentos" class="card-img">
-          <h4>Projeto Alimentar com Amor</h4>
-          <p>Distribuímos cestas básicas e refeições para famílias em situação de vulnerabilidade social.</p>
-        </article>
-
-        <article class="card">
-          <img src="assets/images/Projeto3.jpg" alt="Crianças estudando" class="card-img">
-          <h4>Educação que Transforma</h4>
-          <p>Oferecemos reforço escolar gratuito e oficinas de leitura para crianças e adolescentes.</p>
-        </article>
-
-        <article class="card">
-          <img src="assets/images/Projeto4.jpg" alt="Mutirão ambiental" class="card-img">
-          <h4>Verde Esperança</h4>
-          <p>Promovemos ações ambientais, como plantio de árvores e campanhas de limpeza urbana.</p>
-        </article>
-      </div>
-    </section>
-
-    <!-- MISSÃO, VISÃO E VALORES -->
-    <section>
-      <h3 class="section-title">Missão, Visão e Valores</h3>
-      <div class="card">
-        <ul>
-          <li><strong>Missão:</strong> Promover o desenvolvimento humano e social.</li>
-          <li><strong>Visão:</strong> Ser referência em projetos de impacto comunitário.</li>
-          <li><strong>Valores:</strong> Solidariedade, Transparência e Respeito.</li>
-        </ul>
-      </div>
-    </section>
-
-    <!-- CONTATO -->
-    <section>
-      <h3 class="section-title">Entre em Contato</h3>
-      <div class="card">
-        <p><strong>E-mail:</strong> contato@ongesperancaviva.org.br</p>
-        <p><strong>Telefone:</strong> (11) 99999-9999</p>
-        <p><strong>Endereço:</strong> Rua da Esperança, 100 - São Paulo/SP</p>
-      </div>
-    </section>
-
-    <!-- MÍDIA -->
-    <section>
-      <h3 class="section-title">Galeria de Impacto</h3>
-      <div class="grid">
-        <video class="card" controls width="100%">
-          <source src="assets/images/video-projeto.mp4" type="video/mp4">
-          Seu navegador não suporta vídeos.
-        </video>
-
         <div class="card">
-          <iframe width="100%" height="215" src="https://www.youtube.com/embed/2RCA8v-r1k0" title="Campanha Esperança Viva" frameborder="0" allowfullscreen></iframe>
+          <img src="assets/images/Projeto3.jpg" alt="Doação de alimentos">
+          <h3>Projeto Alimentar com Amor</h3>
+          <p>Distribuímos cestas básicas e refeições para famílias em situação de vulnerabilidade social.</p>
+        </div>
+        <div class="card">
+          <img src="assets/images/Projeto4.jpg" alt="Educação para todos">
+          <h3>Educação que Transforma</h3>
+          <p>Reforço escolar gratuito e oficinas educativas para crianças e adolescentes.</p>
+        </div>
+        <div class="card">
+          <img src="assets/images/Projeto1.jpg" alt="Ação ambiental">
+          <h3>Verde Esperança</h3>
+          <p>Campanhas de conscientização e mutirões de limpeza em áreas públicas.</p>
         </div>
       </div>
     </section>
 
+    <section class="section">
+      <h2>Missão, Visão e Valores</h2>
+      <p><strong>Missão:</strong> Promover o desenvolvimento humano e social.</p>
+      <p><strong>Visão:</strong> Ser referência em projetos de impacto comunitário.</p>
+      <p><strong>Valores:</strong> Solidariedade, Transparência e Respeito.</p>
+    </section>
+
+    <section class="section">
+      <h2>Entre em Contato</h2>
+      <p><strong>E-mail:</strong> contato@ongesperancaviva.org.br</p>
+      <p><strong>Telefone:</strong> (11) 99999-9999</p>
+      <p><strong>Endereço:</strong> Rua da Esperança, 100 — São Paulo/SP</p>
+    </section>
   </main>
 
-  <!-- Rodapé -->
-  <footer class="site-footer">
-    <p>© <span id="year"></span> ONG Esperança Viva — Todos os direitos reservados.</p>
+  <footer>
+    © 2025 ONG Esperança Viva — Todos os direitos reservados.
   </footer>
+
+  <script>
+    const toggle = document.getElementById('menu-toggle');
+    const nav = document.getElementById('nav-menu');
+
+    toggle.addEventListener('click', () => {
+      nav.classList.toggle('active');
+    });
+  </script>
 </body>
 </html>
