--- a/index.html
+++ b/index.html
@@ -1,259 +1,77 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ONG Esperança Viva</title>
-
-  <!-- Fonte moderna -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-
-  <!-- Estilos gerais -->
-  <link rel="stylesheet" href="css/styles.css" />
-
-  <style>
-    body {
-      margin: 0;
-      font-family: "Inter", sans-serif;
-      background-color: #f5f5f5;
-      color: #333;
-    }
-
-    /* ====== CABEÇALHO ====== */
-    header {
-      background-color: #2e7d32;
-      color: #fff;
-      padding: 15px 20px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      position: relative;
-    }
-
-    .menu-toggle {
-      font-size: 28px;
-      cursor: pointer;
-      background: none;
-      border: none;
-      color: #fff;
-    }
-
-    .site-title {
-      font-weight: 700;
-      font-size: 1.6rem;
-      text-align: center;
-      flex: 1;
-      color: #fff;
-      letter-spacing: 1px;
-    }
-
-    nav {
-      display: flex;
-      gap: 20px;
-    }
-
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      font-weight: 500;
-      transition: color 0.3s;
-    }
-
-    nav a:hover {
-      color: #c8e6c9;
-    }
-
-    /* ====== MENU RESPONSIVO ====== */
-    @media (max-width: 768px) {
-      nav {
-        display: none;
-        position: absolute;
-        top: 60px;
-        left: 0;
-        width: 100%;
-        background-color: #2e7d32;
-        flex-direction: column;
-        align-items: center;
-        padding: 10px 0;
-      }
-
-      nav.active {
-        display: flex;
-      }
-    }
-
-    /* ====== CONTEÚDO PRINCIPAL ====== */
-    main {
-      padding: 40px 20px;
-      max-width: 1200px;
-      margin: 0 auto;
-      display: grid;
-      gap: 30px;
-    }
-
-    .intro {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      align-items: center;
-      gap: 30px;
-    }
-
-    .intro h1 {
-      font-size: 2.5rem;
-      color: #2e7d32;
-      line-height: 1.2;
-      margin-bottom: 10px;
-    }
-
-    .intro p {
-      font-size: 1.1rem;
-      margin-bottom: 15px;
-    }
-
-    .btn {
-      background-color: #2e7d32;
-      color: #fff;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 6px;
-      text-decoration: none;
-      font-weight: 600;
-      display: inline-block;
-    }
-
-    .btn:hover {
-      background-color: #1b5e20;
-    }
-
-    .intro img {
-      width: 100%;
-      border-radius: 12px;
-      box-shadow: 0 3px 10px rgba(0, 0, 0, 0.15);
-    }
-
-    /* ====== SEÇÕES ====== */
-    .section {
-      background: #fff;
-      padding: 25px;
-      border-radius: 12px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    }
-
-    .section h2 {
-      color: #2e7d32;
-      font-size: 1.6rem;
-      margin-bottom: 15px;
-    }
-
-    .grid {
-      display: grid;
-      gap: 20px;
-    }
-
-    @media (min-width: 768px) {
-      .grid {
-        grid-template-columns: repeat(3, 1fr);
-      }
-    }
-
-    .card {
-      background: #fafafa;
-      border-radius: 10px;
-      padding: 15px;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-      text-align: center;
-    }
-
-    .card img {
-      width: 100%;
-      border-radius: 10px;
-      margin-bottom: 10px;
-    }
-
-    .card h3 {
-      color: #2e7d32;
-      margin-bottom: 8px;
-    }
-
-    footer {
-      background-color: #2e7d32;
-      color: #fff;
-      text-align: center;
-      padding: 15px 0;
-      margin-top: 40px;
-    }
-  </style>
+  <link rel="stylesheet" href="css/variables.css">
+  <link rel="stylesheet" href="css/layout.css">
+  <link rel="stylesheet" href="css/components.css">
+  <link rel="stylesheet" href="css/forms.css">
+  <script defer src="js/scripts.js"></script>
 </head>
+
 <body>
-  <!-- ====== CABEÇALHO ====== -->
   <header>
-    <button class="menu-toggle" id="menu-toggle">☰</button>
-    <h1 class="site-title">ONG Esperança Viva</h1>
-    <nav id="nav-menu">
-      <a href="index.html">Início</a>
-      <a href="projetos.html">Projetos</a>
-      <a href="cadastro.html">Cadastro</a>
+    <h1>ONG Esperança Viva</h1>
+    <button class="menu-btn">☰ Menu</button>
+    <nav>
+      <ul>
+        <li><a href="#sobre">Sobre</a></li>
+        <li><a href="#projetos">Projetos</a></li>
+        <li><a href="#cadastro">Cadastro</a></li>
+        <li><a href="#contato">Contato</a></li>
+      </ul>
     </nav>
   </header>
 
-  <!-- ====== CONTEÚDO PRINCIPAL ====== -->
-  <main>
-    <section class="intro">
-      <div>
-        <h1>Transformando vidas por meio da solidariedade</h1>
-        <p>A <strong>ONG Esperança Viva</strong> atua há mais de 10 anos promovendo inclusão social e oportunidades para comunidades carentes.</p>
-        <a href="projetos.html" class="btn">Conheça nossos projetos</a>
-      </div>
-      <img src="assets/images/Projeto2.jpg" alt="Ação solidária">
+  <main class="container">
+    <!-- Seção Sobre -->
+    <section id="sobre" class="card">
+      <h2>Sobre Nós</h2>
+      <p>A ONG Esperança Viva atua promovendo ações sociais voltadas para famílias em situação de vulnerabilidade. Nosso objetivo é transformar vidas por meio da solidariedade e do trabalho em equipe.</p>
     </section>
 
-    <section class="section">
-      <h2>Projetos em Destaque</h2>
-      <div class="grid">
-        <div class="card">
-          <img src="assets/images/Projeto3.jpg" alt="Doação de alimentos">
-          <h3>Projeto Alimentar com Amor</h3>
-          <p>Distribuímos cestas básicas e refeições para famílias em situação de vulnerabilidade social.</p>
-        </div>
-        <div class="card">
-          <img src="assets/images/Projeto4.jpg" alt="Educação para todos">
-          <h3>Educação que Transforma</h3>
-          <p>Reforço escolar gratuito e oficinas educativas para crianças e adolescentes.</p>
-        </div>
-        <div class="card">
-          <img src="assets/images/Projeto1.jpg" alt="Ação ambiental">
-          <h3>Verde Esperança</h3>
-          <p>Campanhas de conscientização e mutirões de limpeza em áreas públicas.</p>
-        </div>
-      </div>
+    <!-- Seção Projetos -->
+    <section id="projetos" class="card">
+      <h2>Projetos</h2>
+      <ul>
+        <li><strong>Alimente Esperança:</strong> Distribuição de cestas básicas.</li>
+        <li><strong>Educar para o Futuro:</strong> Apoio escolar para crianças e jovens.</li>
+        <li><strong>Saúde em Ação:</strong> Acompanhamento de famílias com atendimento médico voluntário.</li>
+      </ul>
     </section>
 
-    <section class="section">
-      <h2>Missão, Visão e Valores</h2>
-      <p><strong>Missão:</strong> Promover o desenvolvimento humano e social.</p>
-      <p><strong>Visão:</strong> Ser referência em projetos de impacto comunitário.</p>
-      <p><strong>Valores:</strong> Solidariedade, Transparência e Respeito.</p>
-    </section>
+    <!-- Seção Cadastro -->
+    <section id="cadastro" class="card">
+      <h2>Cadastro de Voluntários</h2>
+      <form id="cadastroForm">
+        <label for="nome">Nome completo</label>
+        <input type="text" id="nome" name="nome" required>
 
-    <section class="section">
-      <h2>Entre em Contato</h2>
-      <p><strong>E-mail:</strong> contato@ongesperancaviva.org.br</p>
-      <p><strong>Telefone:</strong> (11) 99999-9999</p>
-      <p><strong>Endereço:</strong> Rua da Esperança, 100 — São Paulo/SP</p>
+        <label for="email">E-mail</label>
+        <input type="email" id="email" name="email" required>
+
+        <label for="cpf">CPF</label>
+        <input type="text" id="cpf" name="cpf">
+
+        <label for="telefone">Telefone</label>
+        <input type="text" id="telefone" name="telefone">
+
+        <label for="cep">CEP</label>
+        <input type="text" id="cep" name="cep">
+
+        <label for="mensagem">Mensagem</label>
+        <textarea id="mensagem" name="mensagem" rows="4"></textarea>
+
+        <button type="submit" class="btn">Enviar</button>
+        <div id="form-messages"></div>
+      </form>
     </section>
   </main>
 
   <footer>
-    © 2025 ONG Esperança Viva — Todos os direitos reservados.
+    <p>© <span id="year"></span> ONG Esperança Viva — Todos os direitos reservados.</p>
   </footer>
-
-  <script>
-    const toggle = document.getElementById('menu-toggle');
-    const nav = document.getElementById('nav-menu');
-
-    toggle.addEventListener('click', () => {
-      nav.classList.toggle('active');
-    });
-  </script>
 </body>
 </html>
