--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <body>
   <header class="site-header" role="banner">
     <div class="brand">
-      <img src="assets/images/hero.jpg" alt="Logo ONG" id="brand-logo">
+      <img src="assets/images/logo.jpg" alt="Logo ONG" id="brand-logo">
       <h1>ONG Esperança Viva</h1>
     </div>
 
